trustfall_core/test_data/tests/parse_errors/invalid_transform_value_type.parse-error.ron
Err(InappropriateTypeForDirectiveArgument("@transform", "value", Pos(
  line: 4,
  column: 42,
)))
